--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -1,10 +1,10 @@
 $themes: (
   light: (
-    bgColor: #fff,
+    bgColor: #EEEEEE,
     textColor: #000,
   ),
   dark: (
-    bgColor: #000,
+    bgColor: #232931,
     textColor: #fff,
   )
 );
@@ -13,7 +13,7 @@ $curTheme: light;
 @mixin useThemes() {
   @each $key, $value in $themes {
     $curTheme: $key !global;
-    html[data-theme=#{key}] & {
+    html[data-theme='#{$key}'] & {
       @content;
     }
   }
@@ -25,9 +25,13 @@ $curTheme: light;
 }
 
 .item {
-  width: 100px;
-  height: 100px;
   @include useThemes {
+    background: getVar('bgColor');
+    color: getVar('textColor');
+  }
+}
+html {
+    @include useThemes {
     background: getVar('bgColor');
     color: getVar('textColor');
   }
